<!--
  Designed and developed by 2020 skydoves (Jaewoong Eum)

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

  http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources>
  <string name="app_name">Pokemon RealGO</string>
  <string name="gotcha">Gotcha! 🎉</string>
  <string name="placeholder_empty_pokemon">There is no pokemon that has been caught.</string>
  <string name="pokemon_name">%s (%s)</string>
  <string name="weight">Weight</string>
  <string name="height">Height</string>
  <string name="base_stats">Base Stats</string>
  <string name="hp">HP</string>
  <string name="atk">ATK</string>
  <string name="def">DEF</string>
  <string name="spd">SPD</string>
  <string name="exp">EXP</string>
</resources>