<?xml version="1.0" encoding="utf-8"?><!--
  Designed and developed by 2020 skydoves (Jaewoong Eum)

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

  http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <data>

    <variable
      name="vm"
      type="com.skydoves.pokedexar.ui.details.DetailViewModel" />

    <variable
      name="pokemon"
      type="com.skydoves.pokedexar.model.Pokemon" />
  </data>

  <androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginBottom="32dp"
      android:descendantFocusability="blocksDescendants">

      <fragment
        android:id="@+id/arFragment"
        android:name="com.google.ar.sceneform.ux.ArFragment"
        android:layout_width="match_parent"
        android:layout_height="340dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="FragmentTagUsage" />

      <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="36dp"
        android:text="@{pokemon.name}"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        android:translationZ="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/arFragment"
        app:toast="@{vm.errorMessage}"
        tools:text="skydoves" />

      <com.skydoves.androidribbon.RibbonRecyclerView
        android:id="@+id/ribbonRecyclerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:bindPokemonTypes="@{vm.pokemonInfo.types}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:ribbon_recycler_orientation="horizontal"
        tools:listitem="@layout/item_ribbon" />

      <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/colorPrimary"
        app:gone="@{!vm.loading}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />

      <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/weight"
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@{vm.pokemonInfo.weightString}"
        android:textSize="21sp"
        app:layout_constraintEnd_toStartOf="@id/height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ribbonRecyclerView"
        tools:text="24.0 KG" />

      <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/height"
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@{vm.pokemonInfo.heightString}"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/weight"
        app:layout_constraintTop_toTopOf="@id/weight"
        tools:text="11 M" />

      <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/weight_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        android:textColor="@color/white_56"
        app:layout_constraintEnd_toStartOf="@id/height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weight"
        tools:text="Weight" />

      <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/height_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height"
        android:textColor="@color/white_56"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/weight"
        app:layout_constraintTop_toBottomOf="@id/height" />

      <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/stats_title"
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/base_stats"
        android:textColor="@color/white_93"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weight_title" />

      <TextView
        android:id="@+id/hp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:text="@string/hp"
        android:textColor="@color/white_70"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stats_title" />

      <com.skydoves.progressview.ProgressView
        android:id="@+id/progress_hp"
        android:layout_width="0dp"
        android:layout_height="18dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="@id/hp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/hp"
        app:layout_constraintTop_toTopOf="@id/hp"
        app:progressView_colorBackground="@color/white"
        app:progressView_colorProgress="@color/colorPrimary"
        app:progressView_labelColorInner="@color/white"
        app:progressView_labelColorOuter="@color/black"
        app:progressView_labelSize="12sp"
        app:progressView_labelText="@{vm.pokemonInfo.hpString}"
        app:progressView_max="@{vm.pokemonInfo.maxHp}"
        app:progressView_progress="@{vm.pokemonInfo.hp}"
        app:progressView_radius="12dp" />

      <TextView
        android:id="@+id/attack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:text="@string/atk"
        android:textColor="@color/white_70"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hp" />

      <com.skydoves.progressview.ProgressView
        android:layout_width="0dp"
        android:layout_height="18dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="@id/attack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/progress_hp"
        app:layout_constraintTop_toTopOf="@id/attack"
        app:progressView_colorBackground="@color/white"
        app:progressView_colorProgress="@color/md_orange_100"
        app:progressView_labelColorInner="@color/white"
        app:progressView_labelColorOuter="@color/black"
        app:progressView_labelSize="12sp"
        app:progressView_labelText="@{vm.pokemonInfo.attackString}"
        app:progressView_max="@{vm.pokemonInfo.maxAttack}"
        app:progressView_progress="@{vm.pokemonInfo.attack}"
        app:progressView_radius="12dp" />

      <TextView
        android:id="@+id/defense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:text="@string/def"
        android:textColor="@color/white_70"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/attack" />

      <com.skydoves.progressview.ProgressView
        android:layout_width="0dp"
        android:layout_height="18dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="@id/defense"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/progress_hp"
        app:layout_constraintTop_toTopOf="@id/defense"
        app:progressView_colorBackground="@color/white"
        app:progressView_colorProgress="@color/md_blue_200"
        app:progressView_labelColorInner="@color/white"
        app:progressView_labelColorOuter="@color/black"
        app:progressView_labelSize="12sp"
        app:progressView_labelText="@{vm.pokemonInfo.defenseString}"
        app:progressView_max="@{vm.pokemonInfo.maxDefense}"
        app:progressView_progress="@{vm.pokemonInfo.defense}"
        app:progressView_radius="12dp" />

      <TextView
        android:id="@+id/speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:text="@string/spd"
        android:textColor="@color/white_70"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/defense" />

      <com.skydoves.progressview.ProgressView
        android:layout_width="0dp"
        android:layout_height="18dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="@id/speed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/progress_hp"
        app:layout_constraintTop_toTopOf="@id/speed"
        app:progressView_colorBackground="@color/white"
        app:progressView_colorProgress="@color/flying"
        app:progressView_labelColorInner="@color/white"
        app:progressView_labelColorOuter="@color/black"
        app:progressView_labelSize="12sp"
        app:progressView_labelText="@{vm.pokemonInfo.speedString}"
        app:progressView_max="@{vm.pokemonInfo.maxSpeed}"
        app:progressView_progress="@{vm.pokemonInfo.speed}"
        app:progressView_radius="12dp" />

      <TextView
        android:id="@+id/exp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:text="@string/exp"
        android:textColor="@color/white_70"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/speed" />

      <com.skydoves.progressview.ProgressView
        android:layout_width="0dp"
        android:layout_height="18dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="@id/exp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/progress_hp"
        app:layout_constraintTop_toTopOf="@id/exp"
        app:progressView_colorBackground="@color/white"
        app:progressView_colorProgress="@color/md_green_200"
        app:progressView_labelColorInner="@color/white"
        app:progressView_labelColorOuter="@color/black"
        app:progressView_labelSize="12sp"
        app:progressView_labelText="@{vm.pokemonInfo.expString}"
        app:progressView_max="@{vm.pokemonInfo.maxExp}"
        app:progressView_progress="@{vm.pokemonInfo.exp}"
        app:progressView_radius="12dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

  </androidx.core.widget.NestedScrollView>

</layout>